--- a/app/src/main/res/layout-land/activity_sign_in.xml
+++ b/app/src/main/res/layout-land/activity_sign_in.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#666"
+    android:background="@color/generalBackground"
     tools:context="com.example.nils.rhymetime.SignInActivity">
 
     <LinearLayout
@@ -17,7 +17,7 @@
         android:orientation="vertical"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:background="#FFF">
+        android:background="@color/white">
 
         <TextView
             android:layout_width="wrap_content"
@@ -57,7 +57,7 @@
         <View
             android:layout_width="wrap_content"
             android:layout_height="2dp"
-            android:background="#666"
+            android:background="@color/generalBackground"
             android:layout_marginTop="0dp">
         </View>
 
@@ -82,7 +82,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:background="#FFF"
+            android:background="@color/white"
             android:text="Proceed without signing in"
             android:textSize="12sp"
             android:padding="10dp"
