--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_alignParentTop="true"
-    android:background="#666">
+    android:background="@color/generalBackground">
 
     <TextView
         android:layout_width="wrap_content"
@@ -42,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:id="@+id/lineView"
-        android:background="#000"
+        android:background="@color/black"
         android:layout_marginTop="70dp"
         android:visibility="invisible">
 
@@ -65,9 +65,9 @@
     <EditText
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:hint="Enter rhyme"
+        android:hint="@string/enter_rhyme"
         android:id="@+id/currentWordET"
-        android:textColor="@android:color/white"
+        android:textColor="@color/white"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="250dp"
         android:visibility="invisible" />
@@ -75,7 +75,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Check"
+        android:text="@string/check"
         android:id="@+id/checkButton"
         android:onClick="validateUserInput"
         android:layout_marginLeft="10dp"
@@ -90,12 +90,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/infoTV"
-        android:text="Press the back button one more time to quit the game."
+        android:text="@string/press_the_back_button_one_more_time_to_quit_the_game"
         android:layout_marginTop="400dp"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
-        android:textColor="@android:color/white"
-        android:visibility="invisible"
-        />
+        android:textColor="@color/white"
+        android:visibility="invisible" />
 
 </RelativeLayout>
