--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -57,8 +57,8 @@
         android:layout_marginTop="0dp"
         android:layout_marginBottom="100dp"
         android:numColumns="4"
-        android:verticalSpacing="5dp"
-        android:horizontalSpacing="5dp"
+        android:verticalSpacing="0dp"
+        android:horizontalSpacing="0dp"
         android:id="@+id/alreadyGuessedGridView"
         android:scrollbars="vertical" />
 
@@ -70,14 +70,16 @@
         android:textColor="@color/white"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="250dp"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        android:imeOptions="actionSearch"
+        android:inputType="text"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/check"
         android:id="@+id/checkButton"
-        android:onClick="validateUserInput"
+        android:onClick="callValidateUserInput"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:layout_toRightOf="@id/currentWordET"
