--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,8 +42,11 @@
     </style>
 
     <!-- alert dialog text style -->
-    <style name="AlertDialogCustom" parent="@android:style/Theme.Dialog">
+    <style name="AlertDialogCustom" parent="@android:style/Theme.DeviceDefault.Dialog">
         <item name="android:typeface">sans</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/black</item>
     </style>
+
 </resources>
